// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsmRequest createNodeElement Should return a new element 1`] = `
Object {
  "$": Object {
    "lat": 1.234,
    "lon": -0.456,
  },
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "aze",
        "v": "rty",
      },
    },
    Object {
      "$": Object {
        "k": "uio",
        "v": "pqs",
      },
    },
  ],
}
`;

exports[`OsmRequest createNodeElement Should return a new element 2`] = `
Object {
  "$": Object {
    "lat": 1.234,
    "lon": -0.456,
  },
  "_type": "node",
  "tag": Array [],
}
`;

exports[`OsmRequest createNote Should return a new note XML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<osm version=\\"0.6\\" generator=\\"OpenStreetMap server\\" copyright=\\"OpenStreetMap and contributors\\" attribution=\\"http://www.openstreetmap.org/copyright\\" license=\\"http://opendatacommons.org/licenses/odbl/1-0/\\">
<note lon=\\"-0.456\\" lat=\\"1.234\\">
  <id>16341</id>
  <url>https://master.apis.dev.openstreetmap.org/api/0.6/notes/16341</url>
  <comment_url>https://master.apis.dev.openstreetmap.org/api/0.6/notes/16341/comment</comment_url>
  <close_url>https://master.apis.dev.openstreetmap.org/api/0.6/notes/16341/close</close_url>
  <date_created>2019-05-17 13:14:21 UTC</date_created>
  <status>open</status>
  <comments>
    <comment>
      <date>2019-05-17 13:14:21 UTC</date>
      <action>opened</action>
      <text>there is a problem here</text>
      <html>&lt;p&gt;there is a problem here&lt;/p&gt;</html>
    </comment>
  </comments>
</note>
</osm>
"
`;

exports[`OsmRequest createRelationElement Should return a new relation element 1`] = `
Object {
  "$": Object {},
  "_type": "relation",
  "member": Array [
    Object {
      "$": Object {
        "ref": "27847742",
        "role": "street",
        "type": "way",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643084",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643085",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643086",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643099",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643103",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643107",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643114",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643117",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643121",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643124",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643129",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643132",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643138",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643143",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643152",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643156",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643160",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643162",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643165",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643169",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643172",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643176",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643180",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643183",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643187",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643191",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643192",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643196",
        "role": "house",
        "type": "node",
      },
    },
  ],
  "tag": Array [
    Object {
      "$": Object {
        "k": "aze",
        "v": "rty",
      },
    },
    Object {
      "$": Object {
        "k": "uio",
        "v": "pqs",
      },
    },
  ],
}
`;

exports[`OsmRequest createRelationElement Should return a new relation element 2`] = `
Object {
  "$": Object {},
  "_type": "relation",
  "member": Array [
    Object {
      "$": Object {
        "ref": "27847742",
        "role": "street",
        "type": "way",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643084",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643085",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643086",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643099",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643103",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643107",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643114",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643117",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643121",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643124",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643129",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643132",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643138",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643143",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643152",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643156",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643160",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643162",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643165",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643169",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643172",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643176",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643180",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643183",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643187",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643191",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643192",
        "role": "house",
        "type": "node",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643196",
        "role": "house",
        "type": "node",
      },
    },
  ],
  "tag": Array [],
}
`;

exports[`OsmRequest createWayElement Should return a new way element 1`] = `
Object {
  "$": Object {},
  "_type": "way",
  "nd": Array [
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769628",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769632",
      },
    },
    Object {
      "$": Object {
        "ref": "511563694",
      },
    },
    Object {
      "$": Object {
        "ref": "511563688",
      },
    },
    Object {
      "$": Object {
        "ref": "511563666",
      },
    },
    Object {
      "$": Object {
        "ref": "511563658",
      },
    },
    Object {
      "$": Object {
        "ref": "511563655",
      },
    },
    Object {
      "$": Object {
        "ref": "511563646",
      },
    },
    Object {
      "$": Object {
        "ref": "1425983435",
      },
    },
    Object {
      "$": Object {
        "ref": "5370456212",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716031",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716064",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716087",
      },
    },
    Object {
      "$": Object {
        "ref": "2894299077",
      },
    },
    Object {
      "$": Object {
        "ref": "2357342688",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133206",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133198",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037083",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037078",
      },
    },
    Object {
      "$": Object {
        "ref": "6106498823",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037077",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769629",
      },
    },
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
  ],
  "tag": Array [
    Object {
      "$": Object {
        "k": "aze",
        "v": "rty",
      },
    },
    Object {
      "$": Object {
        "k": "uio",
        "v": "pqs",
      },
    },
  ],
}
`;

exports[`OsmRequest createWayElement Should return a new way element 2`] = `
Object {
  "$": Object {},
  "_type": "way",
  "nd": Array [
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769628",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769632",
      },
    },
    Object {
      "$": Object {
        "ref": "511563694",
      },
    },
    Object {
      "$": Object {
        "ref": "511563688",
      },
    },
    Object {
      "$": Object {
        "ref": "511563666",
      },
    },
    Object {
      "$": Object {
        "ref": "511563658",
      },
    },
    Object {
      "$": Object {
        "ref": "511563655",
      },
    },
    Object {
      "$": Object {
        "ref": "511563646",
      },
    },
    Object {
      "$": Object {
        "ref": "1425983435",
      },
    },
    Object {
      "$": Object {
        "ref": "5370456212",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716031",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716064",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716087",
      },
    },
    Object {
      "$": Object {
        "ref": "2894299077",
      },
    },
    Object {
      "$": Object {
        "ref": "2357342688",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133206",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133198",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037083",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037078",
      },
    },
    Object {
      "$": Object {
        "ref": "6106498823",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037077",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769629",
      },
    },
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
  ],
  "tag": Array [],
}
`;

exports[`OsmRequest fetchChangeset Should return changeset details 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<osm version=\\"0.6\\" generator=\\"CGImap 0.6.1 (5071 thorn-01.openstreetmap.org)\\" copyright=\\"OpenStreetMap and contributors\\" attribution=\\"http://www.openstreetmap.org/copyright\\" license=\\"http://opendatacommons.org/licenses/odbl/1-0/\\">
 <changeset id=\\"12345\\" created_at=\\"2007-04-11T14:14:22Z\\" closed_at=\\"2007-04-11T16:22:41Z\\" open=\\"false\\" user=\\"A_Larsson\\" uid=\\"1684\\" min_lat=\\"60.4468373\\" min_lon=\\"14.1935007\\" max_lat=\\"60.5287575\\" max_lon=\\"14.2675181\\" comments_count=\\"0\\"/>
</osm>"
`;

exports[`OsmRequest fetchChangesets Should return several changesets details 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<osm version=\\"0.6\\" generator=\\"OpenStreetMap server\\" copyright=\\"OpenStreetMap and contributors\\" attribution=\\"http://www.openstreetmap.org/copyright\\" license=\\"http://opendatacommons.org/licenses/odbl/1-0/\\">
<changeset id=\\"70354642\\" created_at=\\"2019-05-17T12:20:23Z\\" open=\\"false\\" comments_count=\\"1\\" changes_count=\\"13\\" closed_at=\\"2019-05-17T12:20:24Z\\" min_lat=\\"-21.2063652\\" min_lon=\\"-113.7673331\\" max_lat=\\"50.6916719\\" max_lon=\\"55.5956610\\" uid=\\"1737608\\" user=\\"ForstEK\\">
  <tag k=\\"created_by\\" v=\\"Level0 v1.2\\"/>
  <tag k=\\"comment\\" v=\\"fix mistakes in street cabinets by taginfo statistics and according wiki (https://wiki.openstreetmap.org/wiki/Tag%3Aman_made%3Dstreet_cabinet)\\"/>
</changeset>
<changeset id=\\"70352483\\" created_at=\\"2019-05-17T11:19:16Z\\" open=\\"false\\" comments_count=\\"0\\" changes_count=\\"2\\" closed_at=\\"2019-05-17T11:19:21Z\\" min_lat=\\"42.5759727\\" min_lon=\\"-3.3780966\\" max_lat=\\"48.8128754\\" max_lon=\\"9.4613199\\" uid=\\"7344022\\" user=\\"Ikkibird\\">
  <tag k=\\"created_by\\" v=\\"StreetComplete 12.0\\"/>
  <tag k=\\"source\\" v=\\"survey\\"/>
  <tag k=\\"comment\\" v=\\"Add road surfaces\\"/>
  <tag k=\\"StreetComplete:quest_type\\" v=\\"AddRoadSurface\\"/>
</changeset>
<changeset id=\\"70351263\\" created_at=\\"2019-05-17T10:44:37Z\\" open=\\"true\\" comments_count=\\"0\\" changes_count=\\"43\\" min_lat=\\"43.0549671\\" min_lon=\\"-76.1438390\\" max_lat=\\"52.5100814\\" max_lon=\\"13.4560026\\" uid=\\"290680\\" user=\\"wheelmap_visitor\\">
  <tag k=\\"created_by\\" v=\\"rosemary v0.4.4\\"/>
  <tag k=\\"comment\\" v=\\"Modified via wheelmap.org\\"/>
</changeset>
</osm>"
`;

exports[`OsmRequest fetchElement Should fetch an element and returned its JSON representation 1`] = `
Object {
  "_id": "3683625932",
  "_type": "node",
  "osm": Object {
    "$": Object {
      "attribution": "http://www.openstreetmap.org/copyright",
      "copyright": "OpenStreetMap and contributors",
      "generator": "CGImap 0.6.0 (9711 thorn-01.openstreetmap.org)",
      "license": "http://opendatacommons.org/licenses/odbl/1-0/",
      "version": "0.6",
    },
    "node": Array [
      Object {
        "$": Object {
          "changeset": "33150668",
          "id": "3683625932",
          "lat": "44.8331455",
          "lon": "-0.5936602",
          "timestamp": "2015-08-06T09:49:47Z",
          "uid": "2568974",
          "user": "Vinber-Num&Lib",
          "version": "1",
          "visible": "true",
        },
        "tag": Array [
          Object {
            "$": Object {
              "k": "amenity",
              "v": "drinking_water",
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`OsmRequest fetchMapByBbox Should fetch map elements for a given bbox 1`] = `
Object {
  "osm": Object {
    "$": Object {
      "attribution": "http://www.openstreetmap.org/copyright",
      "copyright": "OpenStreetMap and contributors",
      "generator": "CGImap 0.6.1 (11417 thorn-02.openstreetmap.org)",
      "license": "http://opendatacommons.org/licenses/odbl/1-0/",
      "version": "0.6",
    },
    "bounds": Array [
      Object {
        "$": Object {
          "maxlat": "47.2145300",
          "maxlon": "-1.5540400",
          "minlat": "47.2135900",
          "minlon": "-1.5565400",
        },
      },
    ],
    "node": Array [
      Object {
        "$": Object {
          "changeset": "18288835",
          "id": "266221357",
          "lat": "47.2146551",
          "lon": "-1.5550901",
          "timestamp": "2013-10-10T21:54:14Z",
          "uid": "1130870",
          "user": "tchaik",
          "version": "7",
          "visible": "true",
        },
      },
      Object {
        "$": Object {
          "changeset": "50500325",
          "id": "266221362",
          "lat": "47.2136820",
          "lon": "-1.5548290",
          "timestamp": "2017-07-23T12:17:35Z",
          "uid": "362997",
          "user": "Virgile1994",
          "version": "15",
          "visible": "true",
        },
        "tag": Array [
          Object {
            "$": Object {
              "k": "highway",
              "v": "mini_roundabout",
            },
          },
        ],
      },
      Object {
        "$": Object {
          "changeset": "47195696",
          "id": "266221363",
          "lat": "47.2129483",
          "lon": "-1.5541300",
          "timestamp": "2017-03-27T09:10:22Z",
          "uid": "5426135",
          "user": "Carto'Cité",
          "version": "6",
          "visible": "true",
        },
      },
    ],
    "relation": Array [
      Object {
        "$": Object {
          "changeset": "56703093",
          "id": "64031",
          "timestamp": "2018-02-26T21:06:41Z",
          "uid": "405985",
          "user": "Pj44300",
          "version": "75",
          "visible": "true",
        },
        "member": Array [
          Object {
            "$": Object {
              "ref": "1574613517",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "513266254",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574613537",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "513266277",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574613532",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "513266329",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574627200",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560791",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574627229",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560847",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574627238",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560812",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574627233",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560758",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1574627206",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560762",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573913312",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "178277314",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573909399",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "286690619",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573913309",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560800",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573830585",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560795",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573830595",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560747",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573830586",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560829",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573800311",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560613",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573645606",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560619",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573642018",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560603",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573642014",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "296396199",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "302674029",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "302674023",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "505664856",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302674015",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "505664877",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302674011",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560685",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302677573",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "147086029",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302677676",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560760",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302680659",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560715",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302680657",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560611",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302679787",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560643",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302678221",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "502473105",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1937874559",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "501456699",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302678467",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560743",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "302678647",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "156560702",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559266",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559219",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559383",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559220",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559421",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559508",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "143898823",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559451",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559425",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559499",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559346",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559238",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559336",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559241",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559375",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559325",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559283",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559279",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559519",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559228",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559549",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559313",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559573",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559269",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559232",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559408",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "143824616",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559399",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559260",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559247",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559230",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "45758425",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "45758426",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559253",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559434",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559282",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "318023906",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559478",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559357",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559492",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559485",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559224",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "194265789",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559264",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "275562087",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559268",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "143767558",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "502473062",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "27584680",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "28434137",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "28434136",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559240",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "502473109",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "27585524",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "183418696",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "27585525",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559322",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559406",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559262",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559486",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "156559328",
              "role": "",
              "type": "way",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "air_conditioning",
              "v": "limited",
            },
          },
          Object {
            "$": Object {
              "k": "bicycle",
              "v": "limited",
            },
          },
          Object {
            "$": Object {
              "k": "by_night",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "colour",
              "v": "#00A651",
            },
          },
          Object {
            "$": Object {
              "k": "from",
              "v": "François Mitterrand",
            },
          },
          Object {
            "$": Object {
              "k": "name",
              "v": "1 François Mitterrand → Beaujoire",
            },
          },
          Object {
            "$": Object {
              "k": "network",
              "v": "TAN",
            },
          },
          Object {
            "$": Object {
              "k": "note:en",
              "v": "Please keep nodes and ways in the right order",
            },
          },
          Object {
            "$": Object {
              "k": "note:fr",
              "v": "Merci de garder les nœuds et les tronçons dans le bon ordre",
            },
          },
          Object {
            "$": Object {
              "k": "operator",
              "v": "SEMITAN",
            },
          },
          Object {
            "$": Object {
              "k": "public_transport:version",
              "v": "2",
            },
          },
          Object {
            "$": Object {
              "k": "ref",
              "v": "1",
            },
          },
          Object {
            "$": Object {
              "k": "route",
              "v": "tram",
            },
          },
          Object {
            "$": Object {
              "k": "supervised",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "text_colour",
              "v": "#FFF",
            },
          },
          Object {
            "$": Object {
              "k": "to",
              "v": "Beaujoire",
            },
          },
          Object {
            "$": Object {
              "k": "type",
              "v": "route",
            },
          },
          Object {
            "$": Object {
              "k": "via",
              "v": "Commerce",
            },
          },
          Object {
            "$": Object {
              "k": "wheelchair",
              "v": "yes",
            },
          },
        ],
      },
      Object {
        "$": Object {
          "changeset": "51866544",
          "id": "64032",
          "timestamp": "2017-09-08T23:18:31Z",
          "uid": "362997",
          "user": "Virgile1994",
          "version": "73",
          "visible": "true",
        },
        "member": Array [
          Object {
            "$": Object {
              "ref": "292036066",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "516237325",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290507757",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "516237250",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290507744",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "516696799",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290507724",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056053",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290507715",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056052",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290507697",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "517020602",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1573734002",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "517020592",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290501129",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "517020584",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290501108",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056051",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290495632",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056050",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290495591",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "519069657",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290495580",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "519069642",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290495562",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "519069628",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290021045",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056033",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290021048",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056047",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290012688",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056046",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290012677",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056023",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290012672",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056021",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290007595",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056017",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290007594",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "520769004",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1550758490",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056028",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1550758491",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "521384846",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1550758489",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158056019",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "290003107",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "521384817",
              "role": "platform",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "1702975501",
              "role": "stop",
              "type": "node",
            },
          },
          Object {
            "$": Object {
              "ref": "158055064",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055267",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055273",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055084",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055270",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055065",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "332126828",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "143769351",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "288191719",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055108",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "141671232",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "285609258",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "141669372",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "26463190",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "29013965",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "29013967",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "141690634",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "141564605",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055899",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055082",
              "role": "",
              "type": "way",
            },
          },
          Object {
            "$": Object {
              "ref": "158055092",
              "role": "",
              "type": "way",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "air_conditioning",
              "v": "no",
            },
          },
          Object {
            "$": Object {
              "k": "bicycle",
              "v": "limited",
            },
          },
          Object {
            "$": Object {
              "k": "by_night",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "colour",
              "v": "#EE1C25",
            },
          },
          Object {
            "$": Object {
              "k": "from",
              "v": "Orvault Grand Val",
            },
          },
          Object {
            "$": Object {
              "k": "name",
              "v": "2 Orvault Grand Val → Gare de Pont-Rousseau",
            },
          },
          Object {
            "$": Object {
              "k": "network",
              "v": "TAN",
            },
          },
          Object {
            "$": Object {
              "k": "note:en",
              "v": "Please keep nodes and ways in the right order",
            },
          },
          Object {
            "$": Object {
              "k": "note:fr",
              "v": "Merci de garder les nœuds et les tronçons dans le bon ordre",
            },
          },
          Object {
            "$": Object {
              "k": "operator",
              "v": "SEMITAN",
            },
          },
          Object {
            "$": Object {
              "k": "public_transport:version",
              "v": "2",
            },
          },
          Object {
            "$": Object {
              "k": "ref",
              "v": "2",
            },
          },
          Object {
            "$": Object {
              "k": "route",
              "v": "tram",
            },
          },
          Object {
            "$": Object {
              "k": "supervised",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "text_colour",
              "v": "#FFF",
            },
          },
          Object {
            "$": Object {
              "k": "to",
              "v": "Gare de Pont Rousseau",
            },
          },
          Object {
            "$": Object {
              "k": "type",
              "v": "route",
            },
          },
          Object {
            "$": Object {
              "k": "via",
              "v": "Commerce",
            },
          },
          Object {
            "$": Object {
              "k": "wheelchair",
              "v": "yes",
            },
          },
        ],
      },
    ],
    "way": Array [
      Object {
        "$": Object {
          "changeset": "50500325",
          "id": "24485913",
          "timestamp": "2017-07-23T12:17:46Z",
          "uid": "362997",
          "user": "Virgile1994",
          "version": "17",
          "visible": "true",
        },
        "nd": Array [
          Object {
            "$": Object {
              "ref": "266221362",
            },
          },
          Object {
            "$": Object {
              "ref": "3373186168",
            },
          },
          Object {
            "$": Object {
              "ref": "4009374095",
            },
          },
          Object {
            "$": Object {
              "ref": "293038819",
            },
          },
          Object {
            "$": Object {
              "ref": "4009374093",
            },
          },
          Object {
            "$": Object {
              "ref": "1973845387",
            },
          },
          Object {
            "$": Object {
              "ref": "1973845376",
            },
          },
          Object {
            "$": Object {
              "ref": "266221363",
            },
          },
          Object {
            "$": Object {
              "ref": "1973845371",
            },
          },
          Object {
            "$": Object {
              "ref": "1973845366",
            },
          },
          Object {
            "$": Object {
              "ref": "309231223",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "access",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "bicycle",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "description",
              "v": "Zone à Trafic Limité",
            },
          },
          Object {
            "$": Object {
              "k": "emergency",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "foot",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "goods",
              "v": "delivery",
            },
          },
          Object {
            "$": Object {
              "k": "hgv",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "highway",
              "v": "residential",
            },
          },
          Object {
            "$": Object {
              "k": "lanes",
              "v": "2",
            },
          },
          Object {
            "$": Object {
              "k": "lit",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "maxspeed",
              "v": "30",
            },
          },
          Object {
            "$": Object {
              "k": "motorcar",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "motorcycle",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "motor_vehicle",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "name",
              "v": "Cours Olivier de Clisson",
            },
          },
          Object {
            "$": Object {
              "k": "psv",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "surface",
              "v": "asphalt",
            },
          },
          Object {
            "$": Object {
              "k": "traffic_sign",
              "v": "FR:B30[30]",
            },
          },
          Object {
            "$": Object {
              "k": "zone:maxspeed",
              "v": "FR:30",
            },
          },
        ],
      },
      Object {
        "$": Object {
          "changeset": "53306072",
          "id": "26685358",
          "timestamp": "2017-10-27T23:21:26Z",
          "uid": "699868",
          "user": "Cybereric",
          "version": "14",
          "visible": "true",
        },
        "nd": Array [
          Object {
            "$": Object {
              "ref": "5137481606",
            },
          },
          Object {
            "$": Object {
              "ref": "5195043605",
            },
          },
          Object {
            "$": Object {
              "ref": "3096039517",
            },
          },
          Object {
            "$": Object {
              "ref": "292661268",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "access",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "bicycle",
              "v": "designated",
            },
          },
          Object {
            "$": Object {
              "k": "emergency",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "foot",
              "v": "designated",
            },
          },
          Object {
            "$": Object {
              "k": "goods",
              "v": "delivery",
            },
          },
          Object {
            "$": Object {
              "k": "highway",
              "v": "pedestrian",
            },
          },
          Object {
            "$": Object {
              "k": "lit",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "motor_vehicle",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "name",
              "v": "Rue Sainte-Catherine",
            },
          },
          Object {
            "$": Object {
              "k": "surface",
              "v": "paving_stones",
            },
          },
        ],
      },
      Object {
        "$": Object {
          "changeset": "52512215",
          "id": "26690880",
          "timestamp": "2017-09-30T13:31:33Z",
          "uid": "2516858",
          "user": "FRichard44",
          "version": "13",
          "visible": "true",
        },
        "nd": Array [
          Object {
            "$": Object {
              "ref": "292713474",
            },
          },
          Object {
            "$": Object {
              "ref": "1739990720",
            },
          },
          Object {
            "$": Object {
              "ref": "3096039520",
            },
          },
          Object {
            "$": Object {
              "ref": "3096039518",
            },
          },
          Object {
            "$": Object {
              "ref": "292661268",
            },
          },
          Object {
            "$": Object {
              "ref": "3096039516",
            },
          },
          Object {
            "$": Object {
              "ref": "1687898128",
            },
          },
          Object {
            "$": Object {
              "ref": "292713471",
            },
          },
          Object {
            "$": Object {
              "ref": "1557439747",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "access",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "bicycle",
              "v": "destination",
            },
          },
          Object {
            "$": Object {
              "k": "foot",
              "v": "designated",
            },
          },
          Object {
            "$": Object {
              "k": "highway",
              "v": "footway",
            },
          },
          Object {
            "$": Object {
              "k": "lit",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "motorcycle",
              "v": "no",
            },
          },
          Object {
            "$": Object {
              "k": "motor_vehicle",
              "v": "no",
            },
          },
          Object {
            "$": Object {
              "k": "name",
              "v": "Allée Cassard",
            },
          },
          Object {
            "$": Object {
              "k": "name:br",
              "v": "Alez Cassard",
            },
          },
          Object {
            "$": Object {
              "k": "name:fr",
              "v": "Allée Cassard",
            },
          },
          Object {
            "$": Object {
              "k": "source:name:br",
              "v": "ofis publik ar brezhoneg",
            },
          },
          Object {
            "$": Object {
              "k": "surface",
              "v": "concrete",
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`OsmRequest fetchMultipleElements Should fetch several elements and return their JSON representations 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<osm version=\\"0.6\\" generator=\\"CGImap 0.6.1 (9425 thorn-03.openstreetmap.org)\\" copyright=\\"OpenStreetMap and contributors\\" attribution=\\"http://www.openstreetmap.org/copyright\\" license=\\"http://opendatacommons.org/licenses/odbl/1-0/\\">
 <node id=\\"123\\" visible=\\"true\\" version=\\"8\\" changeset=\\"38852974\\" timestamp=\\"2016-04-25T10:30:27Z\\" user=\\"Noen\\" uid=\\"605010\\" lat=\\"59.9503286\\" lon=\\"10.7899198\\"/>
 <node id=\\"456\\" visible=\\"true\\" version=\\"2\\" changeset=\\"54683425\\" timestamp=\\"2017-12-16T15:58:37Z\\" user=\\"Reitstoen_import\\" uid=\\"3296383\\" lat=\\"68.3744349\\" lon=\\"16.5711354\\"/>
 <node id=\\"789\\" visible=\\"true\\" version=\\"6\\" changeset=\\"336150\\" timestamp=\\"2008-10-14T20:00:50Z\\" user=\\"Wojak\\" uid=\\"51161\\" lat=\\"59.8925629\\" lon=\\"10.5063028\\"/>
</osm>"
`;

exports[`OsmRequest fetchNote Should fetch a single note by id 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      22.9105161,
      45.8820898,
    ],
    "type": "Point",
  },
  "properties": Object {
    "close_url": "https://api.openstreetmap.org/api/0.6/notes/1781930/close.json",
    "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1781930/comment.json",
    "comments": Array [
      Object {
        "action": "opened",
        "date": "2019-05-17 09:49:13 UTC",
        "html": "<p>\\"Hidrant subteran tip B-B\\"
<br />POI has no name
<br />POI types: emergency-fire_hydrant
<br />OSM data version: 2019-03-28T14:13:02Z
<br /> #mapsme</p>",
        "text": "\\"Hidrant subteran tip B-B\\"
POI has no name
POI types: emergency-fire_hydrant
OSM data version: 2019-03-28T14:13:02Z
 #mapsme",
        "uid": 9582846,
        "user": "CrihanMircea",
        "user_url": "https://api.openstreetmap.org/user/CrihanMircea",
      },
    ],
    "date_created": "2019-05-17 09:49:13 UTC",
    "id": 1781930,
    "status": "open",
    "url": "https://api.openstreetmap.org/api/0.6/notes/1781930.json",
  },
  "type": "Feature",
}
`;

exports[`OsmRequest fetchNotes Should fetch notes from a given bbox 1`] = `
Array [
  Object {
    "close_url": "https://api.openstreetmap.org/api/0.6/notes/1369237/close",
    "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1369237/comment",
    "comments": Array [
      Object {
        "action": "opened",
        "date": "2018-04-22 17:54:49 UTC",
        "html": "<p>Chez Florentin, Faustine, Aimé, Julien et Marine.</p>",
        "text": "Chez Florentin, Faustine, Aimé, Julien et Marine.",
      },
      Object {
        "action": "commented",
        "date": "2018-04-22 17:57:56 UTC",
        "html": "<p>c'est quoi ? une note personnelle ou le nom d'un établissement ?</p>",
        "text": "c'est quoi ? une note personnelle ou le nom d'un établissement ?",
      },
    ],
    "date_created": "2018-04-22 17:54:49 UTC",
    "id": "1369237",
    "lat": "44.4068500",
    "lon": "0.5891000",
    "status": "open",
    "url": "https://api.openstreetmap.org/api/0.6/notes/1369237",
  },
  Object {
    "comments": Array [
      Object {
        "action": "opened",
        "date": "2018-01-16 15:28:34 UTC",
        "html": "<p>carrefour market</p>",
        "text": "carrefour market",
      },
      Object {
        "action": "closed",
        "date": "2018-04-20 11:43:00 UTC",
        "html": "<p></p>",
        "text": "",
        "uid": "2533303",
        "user": "opline",
        "user_url": "https://api.openstreetmap.org/user/opline",
      },
    ],
    "date_closed": "2018-04-20 11:43:00 UTC",
    "date_created": "2018-01-16 15:28:34 UTC",
    "id": "1270165",
    "lat": "44.4890700",
    "lon": "0.1802000",
    "reopen_url": "https://api.openstreetmap.org/api/0.6/notes/1270165/reopen",
    "status": "closed",
    "url": "https://api.openstreetmap.org/api/0.6/notes/1270165",
  },
  Object {
    "close_url": "https://api.openstreetmap.org/api/0.6/notes/1365069/close",
    "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1365069/comment",
    "comments": Array [
      Object {
        "action": "opened",
        "date": "2018-04-18 17:46:14 UTC",
        "html": "<p>Labro</p>",
        "text": "Labro",
      },
    ],
    "date_created": "2018-04-18 17:46:14 UTC",
    "id": "1365069",
    "lat": "44.4201400",
    "lon": "0.7933400",
    "status": "open",
    "url": "https://api.openstreetmap.org/api/0.6/notes/1365069",
  },
  Object {
    "close_url": "https://api.openstreetmap.org/api/0.6/notes/1106518/close",
    "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1106518/comment",
    "comments": Array [
      Object {
        "action": "opened",
        "date": "2017-08-16 15:41:56 UTC",
        "html": "<p>Monplaisir</p>",
        "text": "Monplaisir",
      },
      Object {
        "action": "commented",
        "date": "2017-08-16 15:42:43 UTC",
        "html": "<p>Les Carbonnières
</p>",
        "text": "Les Carbonnières
",
      },
      Object {
        "action": "commented",
        "date": "2017-08-17 16:57:49 UTC",
        "html": "<p>lieu-dit, rue ou résidence?</p>",
        "text": "lieu-dit, rue ou résidence?",
        "uid": "379182",
        "user": "Metaltyty",
        "user_url": "https://api.openstreetmap.org/user/Metaltyty",
      },
      Object {
        "action": "commented",
        "date": "2017-08-24 15:44:07 UTC",
        "html": "<p>Lieu dit</p>",
        "text": "Lieu dit",
      },
      Object {
        "action": "commented",
        "date": "2017-10-22 16:06:12 UTC",
        "html": "<p>Monplaisir ou les carbonnières ? Vous nous proposez deux noms</p>",
        "text": "Monplaisir ou les carbonnières ? Vous nous proposez deux noms",
        "uid": "2533303",
        "user": "opline",
        "user_url": "https://api.openstreetmap.org/user/opline",
      },
      Object {
        "action": "commented",
        "date": "2018-04-08 19:35:56 UTC",
        "html": "<p>on cloture, pas de réactions ?</p>",
        "text": "on cloture, pas de réactions ?",
        "uid": "2568974",
        "user": "Vinber-Num&Lib",
        "user_url": "https://api.openstreetmap.org/user/Vinber-Num&Lib",
      },
    ],
    "date_created": "2017-08-16 15:41:56 UTC",
    "id": "1106518",
    "lat": "44.5063613",
    "lon": "0.2216578",
    "status": "open",
    "url": "https://api.openstreetmap.org/api/0.6/notes/1106518",
  },
]
`;

exports[`OsmRequest fetchNotesSearch Should fetch notes using text search 1`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          18.9413056,
          50.9155037,
        ],
        "type": "Point",
      },
      "properties": Object {
        "close_url": "https://api.openstreetmap.org/api/0.6/notes/1782041/close.json",
        "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1782041/comment.json",
        "comments": Array [
          Object {
            "action": "opened",
            "date": "2019-05-17 12:19:30 UTC",
            "html": "<p>\\"Tu nie ma hydrantu, potwierdzenie na google street view, ja widzialem osobiscie\\"
<br />The place has gone or never existed. This is an auto-generated note from MAPS.ME application: a user reports a POI that is visible on a map (which can be outdated), but cannot be found on the ground.
<br />POI has no name
<br />POI types: emergency-fire_hydrant
<br />OSM data version: 2019-04-19T10:36:02Z
<br /> #mapsme</p>",
            "text": "\\"Tu nie ma hydrantu, potwierdzenie na google street view, ja widzialem osobiscie\\"
The place has gone or never existed. This is an auto-generated note from MAPS.ME application: a user reports a POI that is visible on a map (which can be outdated), but cannot be found on the ground.
POI has no name
POI types: emergency-fire_hydrant
OSM data version: 2019-04-19T10:36:02Z
 #mapsme",
            "uid": 6475221,
            "user": "Dominik Kumiszczo",
            "user_url": "https://api.openstreetmap.org/user/Dominik%20Kumiszczo",
          },
        ],
        "date_created": "2019-05-17 12:19:30 UTC",
        "id": 1782041,
        "status": "open",
        "url": "https://api.openstreetmap.org/api/0.6/notes/1782041.json",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          22.9105161,
          45.8820898,
        ],
        "type": "Point",
      },
      "properties": Object {
        "close_url": "https://api.openstreetmap.org/api/0.6/notes/1781930/close.json",
        "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1781930/comment.json",
        "comments": Array [
          Object {
            "action": "opened",
            "date": "2019-05-17 09:49:13 UTC",
            "html": "<p>\\"Hidrant subteran tip B-B\\"
<br />POI has no name
<br />POI types: emergency-fire_hydrant
<br />OSM data version: 2019-03-28T14:13:02Z
<br /> #mapsme</p>",
            "text": "\\"Hidrant subteran tip B-B\\"
POI has no name
POI types: emergency-fire_hydrant
OSM data version: 2019-03-28T14:13:02Z
 #mapsme",
            "uid": 9582846,
            "user": "CrihanMircea",
            "user_url": "https://api.openstreetmap.org/user/CrihanMircea",
          },
        ],
        "date_created": "2019-05-17 09:49:13 UTC",
        "id": 1781930,
        "status": "open",
        "url": "https://api.openstreetmap.org/api/0.6/notes/1781930.json",
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          36.2521473,
          54.5943915,
        ],
        "type": "Point",
      },
      "properties": Object {
        "close_url": "https://api.openstreetmap.org/api/0.6/notes/1781857/close.json",
        "comment_url": "https://api.openstreetmap.org/api/0.6/notes/1781857/comment.json",
        "comments": Array [
          Object {
            "action": "opened",
            "date": "2019-05-17 08:40:50 UTC",
            "html": "<p>\\"ПГ\\"
<br />POI has no name
<br />POI types: emergency-fire_hydrant
<br />OSM data version: 2019-04-19T10:36:02Z
<br /> #mapsme</p>",
            "text": "\\"ПГ\\"
POI has no name
POI types: emergency-fire_hydrant
OSM data version: 2019-04-19T10:36:02Z
 #mapsme",
            "uid": 9863039,
            "user": "Муравей",
            "user_url": "https://api.openstreetmap.org/user/%D0%9C%D1%83%D1%80%D0%B0%D0%B2%D0%B5%D0%B9",
          },
        ],
        "date_created": "2019-05-17 08:40:50 UTC",
        "id": 1781857,
        "status": "open",
        "url": "https://api.openstreetmap.org/api/0.6/notes/1781857.json",
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`OsmRequest fetchUser Should fetch a single user by id 1`] = `
Object {
  "account_created": "2010-01-02T13:40:42Z",
  "blocks": Object {
    "received": Array [
      Object {
        "active": "0",
        "count": "1",
      },
    ],
  },
  "changesets": Object {
    "count": "3616",
  },
  "contributor-terms": Object {
    "agreed": "true",
  },
  "description": "OpenStreetMap passionate, I contribute mainly in the west of France on various subjects : indoor mapping, street equipment, advertisement...",
  "display_name": "PanierAvide",
  "id": "214436",
  "img": Object {
    "href": "https://www.openstreetmap.org/rails/active_storage/representations/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBamNZIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--576881ff3e6c38ff381c9ecceff09761c61951db/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdCam9MY21WemFYcGxTU0lOTVRBd2VERXdNRDRHT2daRlZBPT0iLCJleHAiOm51bGwsInB1ciI6InZhcmlhdGlvbiJ9fQ==--efdc66963555b7419037018ba117eb1fea762dc5/Tux_avatar.png",
  },
  "roles": " ",
  "traces": Object {
    "count": "95",
  },
}
`;

exports[`OsmRequest fetchWaysForNode Should fetch ways using this node and return their JSON representation 1`] = `
Object {
  "_id": "536287533",
  "_type": "way",
  "osm": Object {
    "$": Object {
      "attribution": "http://www.openstreetmap.org/copyright",
      "copyright": "OpenStreetMap and contributors",
      "generator": "CGImap 0.6.0 (9711 thorn-01.openstreetmap.org)",
      "license": "http://opendatacommons.org/licenses/odbl/1-0/",
      "version": "0.6",
    },
    "way": Array [
      Object {
        "$": Object {
          "changeset": "62261628",
          "id": "536287533",
          "timestamp": "2018-09-03T23:46:20Z",
          "uid": "1443767",
          "user": "Olyon",
          "version": "3",
          "visible": "true",
        },
        "nd": Array [
          Object {
            "$": Object {
              "ref": "5195549178",
            },
          },
          Object {
            "$": Object {
              "ref": "5336441517",
            },
          },
          Object {
            "$": Object {
              "ref": "5336441515",
            },
          },
          Object {
            "$": Object {
              "ref": "5336441519",
            },
          },
          Object {
            "$": Object {
              "ref": "5336441518",
            },
          },
          Object {
            "$": Object {
              "ref": "1153562749",
            },
          },
        ],
        "tag": Array [
          Object {
            "$": Object {
              "k": "highway",
              "v": "primary",
            },
          },
          Object {
            "$": Object {
              "k": "lanes",
              "v": "1",
            },
          },
          Object {
            "$": Object {
              "k": "maxspeed",
              "v": "80",
            },
          },
          Object {
            "$": Object {
              "k": "old_ref",
              "v": "N 512",
            },
          },
          Object {
            "$": Object {
              "k": "oneway",
              "v": "yes",
            },
          },
          Object {
            "$": Object {
              "k": "ref",
              "v": "D 2152",
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`OsmRequest getRelationMembers Should return the members of a relation 1`] = `
Array [
  Object {
    "id": "way/27847742",
    "role": "street",
  },
  Object {
    "id": "node/1659643084",
    "role": "house",
  },
  Object {
    "id": "node/1659643085",
    "role": "house",
  },
  Object {
    "id": "node/1659643086",
    "role": "house",
  },
  Object {
    "id": "node/1659643099",
    "role": "house",
  },
  Object {
    "id": "node/1659643103",
    "role": "house",
  },
  Object {
    "id": "node/1659643107",
    "role": "house",
  },
  Object {
    "id": "node/1659643114",
    "role": "house",
  },
  Object {
    "id": "node/1659643117",
    "role": "house",
  },
  Object {
    "id": "node/1659643121",
    "role": "house",
  },
  Object {
    "id": "node/1659643124",
    "role": "house",
  },
  Object {
    "id": "node/1659643129",
    "role": "house",
  },
  Object {
    "id": "node/1659643132",
    "role": "house",
  },
  Object {
    "id": "node/1659643138",
    "role": "house",
  },
  Object {
    "id": "node/1659643143",
    "role": "house",
  },
  Object {
    "id": "node/1659643152",
    "role": "house",
  },
  Object {
    "id": "node/1659643156",
    "role": "house",
  },
  Object {
    "id": "node/1659643160",
    "role": "house",
  },
  Object {
    "id": "node/1659643162",
    "role": "house",
  },
  Object {
    "id": "node/1659643165",
    "role": "house",
  },
  Object {
    "id": "node/1659643169",
    "role": "house",
  },
  Object {
    "id": "node/1659643172",
    "role": "house",
  },
  Object {
    "id": "node/1659643176",
    "role": "house",
  },
  Object {
    "id": "node/1659643180",
    "role": "house",
  },
  Object {
    "id": "node/1659643183",
    "role": "house",
  },
  Object {
    "id": "node/1659643187",
    "role": "house",
  },
  Object {
    "id": "node/1659643191",
    "role": "house",
  },
  Object {
    "id": "node/1659643192",
    "role": "house",
  },
  Object {
    "id": "node/1659643196",
    "role": "house",
  },
]
`;

exports[`OsmRequest getTags returns tags of node with tag property 1`] = `Object {}`;

exports[`OsmRequest getTags returns tags of node without tag property 1`] = `Object {}`;

exports[`OsmRequest getTags returns tags of way with tag property 1`] = `
Object {
  "alt_name": "L'Estréniol",
  "landuse": "retail",
  "name": "Pôle commercial du Comtal Ouest",
  "old_name": "Zone Commercial l'Astragale",
  "wikipedia": "fr:Le Comtal (Sébazac-Concourès)",
}
`;

exports[`OsmRequest removeTag Should remove a tag from an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [],
}
`;

exports[`OsmRequest replaceTags Should completely replace existing tags 1`] = `
Object {
  "$": Object {
    "changeset": "65048894",
    "id": "211323881",
    "timestamp": "2018-11-30T15:49:04Z",
    "uid": "4154080",
    "user": "noyeux",
    "version": "9",
    "visible": "true",
  },
  "_id": "211323881",
  "_type": "way",
  "nd": Array [
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769628",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769632",
      },
    },
    Object {
      "$": Object {
        "ref": "511563694",
      },
    },
    Object {
      "$": Object {
        "ref": "511563688",
      },
    },
    Object {
      "$": Object {
        "ref": "511563666",
      },
    },
    Object {
      "$": Object {
        "ref": "511563658",
      },
    },
    Object {
      "$": Object {
        "ref": "511563655",
      },
    },
    Object {
      "$": Object {
        "ref": "511563646",
      },
    },
    Object {
      "$": Object {
        "ref": "1425983435",
      },
    },
    Object {
      "$": Object {
        "ref": "5370456212",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716031",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716064",
      },
    },
    Object {
      "$": Object {
        "ref": "2032716087",
      },
    },
    Object {
      "$": Object {
        "ref": "2894299077",
      },
    },
    Object {
      "$": Object {
        "ref": "2357342688",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133206",
      },
    },
    Object {
      "$": Object {
        "ref": "2173133198",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037083",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037078",
      },
    },
    Object {
      "$": Object {
        "ref": "6106498823",
      },
    },
    Object {
      "$": Object {
        "ref": "1979037077",
      },
    },
    Object {
      "$": Object {
        "ref": "2179769629",
      },
    },
    Object {
      "$": Object {
        "ref": "2213384362",
      },
    },
  ],
  "tag": Array [
    Object {
      "$": Object {
        "k": "amenity",
        "v": "restaurant",
      },
    },
    Object {
      "$": Object {
        "k": "name",
        "v": "Best Sushi in Town",
      },
    },
  ],
}
`;

exports[`OsmRequest setCoordinates Should update the coordinates of an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "1.234",
    "lon": "-0.456",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [],
}
`;

exports[`OsmRequest setRelationMembers Should update the members of a relation 1`] = `
Object {
  "$": Object {
    "changeset": "14958524",
    "id": "2068206",
    "timestamp": "2013-02-08T18:11:06Z",
    "uid": "1220754",
    "user": "isnogoud_bot",
    "version": "2",
    "visible": "true",
  },
  "_id": "2068206",
  "_type": "relation",
  "member": Array [
    Object {
      "$": Object {
        "ref": "27847742",
        "role": "street",
        "type": "way",
      },
    },
    Object {
      "$": Object {
        "ref": "1659643084",
        "role": "house",
        "type": "node",
      },
    },
  ],
  "tag": Array [
    Object {
      "$": Object {
        "k": "name",
        "v": "Rue de Belleville",
      },
    },
    Object {
      "$": Object {
        "k": "ref:FR:FANTOIR",
        "v": "728",
      },
    },
    Object {
      "$": Object {
        "k": "type",
        "v": "associatedStreet",
      },
    },
  ],
}
`;

exports[`OsmRequest setTag Should add a tag to an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "weird_key",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTag Should add a tag to an element having no tag 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "weird_key",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTag Should modify an element tag 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "amenity",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTags Should add a tag to an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "weird_key",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTags Should modify an element tag 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "amenity",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTags Should work with an element having no tags 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [
    Object {
      "$": Object {
        "k": "amenity",
        "v": "stuff",
      },
    },
  ],
}
`;

exports[`OsmRequest setTimestampToNow Should update the timestamp of an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2018-04-25T07:06:47.550Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "1",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [],
}
`;

exports[`OsmRequest setVersion Should change the version number of an element 1`] = `
Object {
  "$": Object {
    "changeset": "33150668",
    "id": "3683625932",
    "lat": "-0.5936602",
    "lon": "44.8331455",
    "timestamp": "2015-08-06T09:49:47Z",
    "uid": "2568974",
    "user": "Vinber-Num&Lib",
    "version": "3",
    "visible": "true",
  },
  "_id": "3683625932",
  "_type": "node",
  "tag": Array [],
}
`;
